Crostini no longer fails to start when disk space is low.

The previous container restart flow would return an error if there was
insufficient disk. Free disk size is not relevant if there's an existing disk
image.

Bug: 891165
Change-Id: I34ed750263182e920ab96befc8b00f1f2b2db89e
Reviewed-on: https://chromium-review.googlesource.com/c/1328482
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Nicholas Verne <nverne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607490}
Former-commit-id: 67f715ec592aa3d5c28da1acb8439216304eaec9