chrome/browser/chromeos/crostini/crostini_manager.h
@@ -33,6 +33,7 @@ enum class CrostiniResult {
   SUCCESS,
   DBUS_ERROR,
   UNPARSEABLE_RESPONSE,
+  INSUFFICIENT_DISK,
   CREATE_DISK_IMAGE_FAILED,
   VM_START_FAILED,
   VM_STOP_FAILED,
@@ -234,6 +235,8 @@ class CrostiniManager : public KeyedService,
       const base::FilePath& disk_path,
       // The storage location for the disk image
       vm_tools::concierge::StorageLocation storage_location,
+      // The logical size of the disk image, in bytes
+      int64_t disk_size_bytes,
       CreateDiskImageCallback callback);
 
   // Checks the arguments for destroying a named Termina VM disk image.
@@ -541,12 +544,6 @@ class CrostiniManager : public KeyedService,
   // checking component registration code may block.
   void MaybeUpgradeCrostiniAfterChecks();
 
-  // Helper for CrostiniManager::CreateDiskImage. Separated so it can be run
-  // off the main thread.
-  void CreateDiskImageAfterSizeCheck(
-      vm_tools::concierge::CreateDiskImageRequest request,
-      CreateDiskImageCallback callback,
-      int64_t free_disk_size);
 
   void FinishRestart(CrostiniRestarter* restarter, CrostiniResult result);
 
